--- a/purrfectpetfinder/package.json
+++ b/purrfectpetfinder/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.1",
     "react-tinder-card": "^1.6.2",
+    "survey-react-ui": "^1.9.81",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
